--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   "dependencies": {
     "@formkit/nuxt": "1.6.9",
     "@nuxt/content": "2.13.4",
-    "@nuxt/eslint": "0.7.5",
+    "@nuxt/eslint": "0.7.6",
     "@nuxt/image": "1.9.0",
     "@nuxt/ui": "2.21.0",
-    "@nuxtjs/i18n": "9.1.1",
-    "@nuxtjs/supabase": "1.4.5",
+    "@nuxtjs/i18n": "9.1.4",
+    "@nuxtjs/supabase": "1.4.6",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@pinia/nuxt": "0.9.0",
-    "@vueuse/core": "12.4.0",
-    "@vueuse/nuxt": "12.4.0",
+    "@vueuse/core": "12.5.0",
+    "@vueuse/nuxt": "12.5.0",
     "consola": "3.4.0",
     "defu": "6.1.4",
     "elrh-pslo": "1.1.6",
@@ -35,15 +35,15 @@
     "nuxt-security": "2.1.5",
     "nuxt-spec": "0.0.2",
     "nuxt-time": "1.0.3",
-    "open-props": "1.7.10",            
-    "pinia": "2.3.0",
+    "open-props": "1.7.12",            
+    "pinia": "2.3.1",
     "postcss-jit-props": "1.0.15",    
-    "typescript": "5.7.3",
+    "typescript": "latest",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
-    "nuxt": "3.15.2"
+    "nuxt": "3.15.4"
   },
   "packageManager": "pnpm@9.15.4"
 }
