--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   "pnpm": {
     "overrides": {
       "vite": "latest",
-      "@nuxtjs/mdc": "^0.13.3"
+      "@nuxtjs/mdc": "^0.13.3",
+      "@nuxt/kit": "3.15.4"
     }
   },
   "devDependencies": {
