--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "pnpm": {
     "overrides": {
-      "vite": "latest",
+      "vite": "^6.1.0",
       "@nuxtjs/mdc": "^0.13.3",
       "@nuxt/kit": "3.15.4"
     }
