--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "defu": "6.1.4",
     "elrh-pslo": "1.1.6",
     "nuxt-neon": "0.3.1",
+    "@nuxt/scripts": "0.10.1",
     "nuxt-security": "2.1.5",
     "nuxt-spec": "0.0.3",
     "nuxt-time": "1.0.3",
-    "open-props": "1.7.12",            
+    "open-props": "1.7.12",
     "pinia": "2.3.1",
-    "postcss-jit-props": "1.0.15",    
+    "postcss-jit-props": "1.0.15",
     "typescript": "latest",
     "vue": "latest",
     "vue-router": "latest"
