--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "pnpm": {
     "overrides": {
+      "koa": "^2.15.4",
       "vite": "^6.1.0",
       "@nuxtjs/mdc": "^0.13.3",
       "@nuxt/kit": "3.15.4"
