--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "pnpm": {
     "overrides": {
       "esbuild": "^0.25.0",
+      "ioredis": "^5.4.2",
       "koa": "^2.15.4",
       "vite": "^6.1.0",
       "@nuxtjs/mdc": "^0.13.3",
