--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@formkit/nuxt": "1.6.9",
     "@nuxt/content": "3.1.0",
     "@nuxt/eslint": "0.7.6",
+    "@nuxt/fonts": "0.10.3",
     "@nuxt/image": "1.9.0",
+    "@nuxt/scripts": "0.10.1",
     "@nuxt/ui": "2.21.0",
     "@nuxtjs/i18n": "9.1.1",
     "@nuxtjs/supabase": "1.4.6",
@@ -30,15 +32,14 @@
     "@vueuse/nuxt": "12.5.0",
     "consola": "3.4.0",
     "defu": "6.1.4",
+    "elrh-postcss-jit-props": "1.0.1",
     "elrh-pslo": "1.1.6",
     "nuxt-neon": "0.3.1",
-    "@nuxt/scripts": "0.10.1",
     "nuxt-security": "2.1.5",
     "nuxt-spec": "0.0.3",
     "nuxt-time": "1.0.3",
     "open-props": "1.7.12",
     "pinia": "2.3.1",
-    "postcss-jit-props": "1.0.15",
     "typescript": "latest",
     "vue": "latest",
     "vue-router": "latest"
