--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@vueuse/nuxt": "12.5.0",
     "consola": "3.4.0",
     "defu": "6.1.4",
-    "elrh-postcss-jit-props": "1.0.1",
     "elrh-pslo": "1.1.6",
     "nuxt-neon": "0.4.0",
     "nuxt-security": "2.1.5",
@@ -58,6 +57,7 @@
     "nuxt-time": "1.0.3",
     "open-props": "1.7.12",
     "pinia": "2.3.1",
+    "postcss-jit-props": "1.0.16",
     "typescript": "latest",
     "vue": "latest",
     "vue-router": "latest"
