--- a/package.json
+++ b/package.json
@@ -64,12 +64,7 @@
   },
   "pnpm": {
     "overrides": {
-      "esbuild": "^0.25.0",
-      "ioredis": "^5.4.2",
-      "koa": "^2.15.4",
-      "vite": "^6.1.0",
-      "@nuxtjs/mdc": "^0.13.3",
-      "@nuxt/kit": "3.15.4"
+      "eslint": "9.16.0"
     }
   },
   "devDependencies": {
