--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   },
   "pnpm": {
     "overrides": {
-      "eslint": "9.16.0"
+      "eslint": "9.16.0",
+      "esbuild": "^0.25.0"
     }
   },
   "devDependencies": {
