--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "overrides": {
       "eslint": "9.16.0",
       "esbuild": "^0.25.0",
-      "vue-i18n": "^10.0.6"
+      "vue-i18n": "^10.0.6",
+      "@babel/helpers": "^7.26.10"
     }
   },
   "devDependencies": {
