build: pin nuxt/kit version to avoid warning

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "pnpm": {
     "overrides": {
+      "@nuxt/kit": "3.16.0",
       "eslint": "9.16.0",
       "esbuild": "^0.25.0",
       "vue-i18n": "^10.0.6",
