--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
       "@nuxt/kit": "3.16.1",
       "eslint": "9.16.0",
       "esbuild": "^0.25.0",
+      "vite": "^6.2.3",
       "vue-i18n": "^10.0.6",
       "@babel/helpers": "^7.26.10"
     }
