--- a/package.json
+++ b/package.json
@@ -58,9 +58,7 @@
     "open-props": "1.7.14",
     "pinia": "3.0.1",
     "postcss-jit-props": "1.0.16",
-    "typescript": "latest",
-    "vue": "latest",
-    "vue-router": "latest"
+    "typescript": "5.7.3"
   },
   "pnpm": {
     "overrides": {
@@ -73,7 +71,9 @@
     }
   },
   "devDependencies": {
-    "nuxt": "3.16.1"
+    "nuxt": "3.16.1",
+    "vue": "3.5.13",
+    "vue-router": "4.5.0"
   },
   "packageManager": "pnpm@9.15.9"
 }
