--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
       "@nuxt/kit": "3.16.2",
       "eslint": "9.16.0",
       "esbuild": "^0.25.0",
+      "koa": "^2.16.1",
       "tar-fs": "^2.1.2",
       "vite": "^6.2.6",
       "vue-i18n": "^10.0.6",
