--- a/docs/package.json
+++ b/docs/package.json
@@ -1,13 +1,17 @@
 {
   "private": true,
   "type": "module",
-  
-  "dependencies": {
-    "vitepress": "1.6.3"
-  },
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
+  },
+  "dependencies": {
+    "vitepress": "1.6.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "esbuild": "^0.25.0"
+    }
   }
 }
