--- a/core/package.json
+++ b/core/package.json
@@ -43,6 +43,7 @@
     "@nuxt/scripts": "0.11.5",
     "@nuxt/ui": "3.0.2",
     "@nuxtjs/i18n": "9.4.0",
+    "@nuxtjs/seo": "3.0.3",
     "@nuxtjs/supabase": "1.5.0",
     "@nuxtjs/tailwindcss": "6.13.2",
     "@pinia/nuxt": "0.10.1",
@@ -69,7 +70,8 @@
       "tar-fs": "^2.1.2",
       "vite": "^6.2.6",
       "vue-i18n": "^10.0.6",
-      "@babel/helpers": "^7.26.10"
+      "@babel/helpers": "^7.26.10",
+      "@unhead/vue": "^2.0.8"
     }
   },
   "devDependencies": {
