--- a/demos/03_full/.env.public
+++ b/demos/03_full/.env.public
@@ -10,6 +10,8 @@ NUXT_PUBLIC_IGNIS_CRYPTO=true
 NUXT_PUBLIC_IGNIS_OPENPROPS=true
 NUXT_PUBLIC_IGNIS_PSLO_ENABLED=true
 NUXT_PUBLIC_IGNIS_PSLO_CONTENT=true
+NUXT_PUBLIC_IGNIS_SEO=true
+NUXT_PUBLIC_IGNIS_AUTH=true
 
 NUXT_NEON_HOST=<NeonDB_host>
 NUXT_NEON_USER=<NeonDB_user>
