feat: add Vueform module

--- a/demos/03_full/.env.public
+++ b/demos/03_full/.env.public
@@ -5,6 +5,7 @@ NUXT_PUBLIC_IGNIS_NEON=true
 NUXT_PUBLIC_IGNIS_SUPABASE=true
 NUXT_PUBLIC_IGNIS_I18N_ENABLED=true
 NUXT_PUBLIC_IGNIS_FORMKIT_ENABLED=true
+NUXT_PUBLIC_IGNIS_VUEFORM=true
 NUXT_PUBLIC_IGNIS_CONTENT=true
 NUXT_PUBLIC_IGNIS_OPENPROPS=true
 NUXT_PUBLIC_IGNIS_PSLO_ENABLED=true
