feat: warn when duplicate db/forms solutions are used

--- a/demos/03_full/.env.public
+++ b/demos/03_full/.env.public
@@ -13,6 +13,8 @@ NUXT_PUBLIC_IGNIS_PSLO_CONTENT=true
 NUXT_PUBLIC_IGNIS_SEO=true
 NUXT_PUBLIC_IGNIS_AUTH=true
 
+NUXT_PUBLIC_IGNIS_WARN_DUPLICATES=false
+
 NUXT_NEON_HOST=<NeonDB_host>
 NUXT_NEON_USER=<NeonDB_user>
 NUXT_NEON_PASS=<NeonDB_pass>
