--- a/core/package.json
+++ b/core/package.json
@@ -37,19 +37,19 @@
   "dependencies": {
     "@formkit/nuxt": "1.6.9",
     "@nuxt/content": "3.5.1",
-    "@nuxt/eslint": "1.3.0",
-    "@nuxt/fonts": "0.11.2",
+    "@nuxt/eslint": "1.3.1",
+    "@nuxt/fonts": "0.11.4",
     "@nuxt/image": "1.10.0",
     "@nuxt/scripts": "0.11.6",
-    "@nuxt/ui": "3.1.0",
-    "@nuxtjs/i18n": "9.5.3",
+    "@nuxt/ui": "3.1.2",
+    "@nuxtjs/i18n": "9.5.4",
     "@nuxtjs/seo": "3.0.3",
-    "@nuxtjs/supabase": "1.5.0",
+    "@nuxtjs/supabase": "1.5.1",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@pinia/nuxt": "0.11.0",
     "@vueform/nuxt": "1.13.0",
-    "@vueuse/core": "13.1.0",
-    "@vueuse/nuxt": "13.1.0",
+    "@vueuse/core": "13.2.0",
+    "@vueuse/nuxt": "13.2.0",
     "consola": "3.4.2",
     "defu": "6.1.4",
     "elrh-pslo": "1.1.6",
@@ -64,14 +64,12 @@
   },
   "pnpm": {
     "overrides": {
-      "@nuxt/kit": "3.17.1",
-      "esbuild": "^0.25.0",
-      "vite": "^6.3.4"
+      "@nuxt/kit": "3.17.3"
     }
   },
   "devDependencies": {
-    "nuxt": "3.17.1",
-    "vue": "3.5.13",
+    "nuxt": "3.17.3",
+    "vue": "3.5.14",
     "vue-router": "4.5.1"
   },
   "packageManager": "pnpm@9.15.9"
