--- a/core/package.json
+++ b/core/package.json
@@ -63,17 +63,27 @@
     "postcss-jit-props": "1.0.16",
     "typescript": "5.8.3"
   },
+  "devDependencies": {
+    "nuxt": "3.17.4",
+    "vue": "3.5.14",
+    "vue-router": "4.5.1"
+  },
   "pnpm": {
     "overrides": {
       "@nuxt/kit": "3.17.4",
       "esbuild": "^0.25.0",
       "trix": "^2.1.15"
-    }
-  },
-  "devDependencies": {
-    "nuxt": "3.17.4",
-    "vue": "3.5.14",
-    "vue-router": "4.5.1"
+    },
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "@tailwindcss/oxide",
+      "better-sqlite3",
+      "esbuild",
+      "puppeteer",
+      "sharp",
+      "unrs-resolver",
+      "vue-demi"
+    ]
   },
   "packageManager": "pnpm@10.11.0"
 }
