--- a/demos/02_bare/package.json
+++ b/demos/02_bare/package.json
@@ -6,6 +6,12 @@
     "dev": "nuxt dev"
   },
   "devDependencies": {
-    "nuxt": "3.16.2"
+    "nuxt": "3.17.4"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "esbuild"
+    ]
   }
 }
