--- a/demos/03_full/package.json
+++ b/demos/03_full/package.json
@@ -6,7 +6,14 @@
     "dev": "nuxt dev"
   },
   "devDependencies": {
-    "nuxt": "3.16.2",
-    "better-sqlite3": "11.9.1"
+    "nuxt": "3.17.4",
+    "better-sqlite3": "11.10.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "better-sqlite3",
+      "esbuild"
+    ]
   }
 }
