feat: provide fix for TailwindCSS sourcemap warning (#73)

--- a/demos/04a_nuxt-ui/package.json
+++ b/demos/04a_nuxt-ui/package.json
@@ -3,7 +3,8 @@
   "name": "ignis-demo-04a",
   "type": "module",
   "scripts": {
-    "dev": "nuxt dev"
+    "dev": "nuxt dev",
+    "build": "nuxt build"
   },
   "devDependencies": {
     "nuxt": "3.17.4"
