--- a/core/package.json
+++ b/core/package.json
@@ -40,40 +40,37 @@
     "@nuxt/eslint": "1.4.1",
     "@nuxt/fonts": "0.11.4",
     "@nuxt/image": "1.10.0",
-    "@nuxt/scripts": "0.11.7",
-    "@nuxt/ui": "3.1.2",
-    "@nuxtjs/i18n": "9.5.4",
+    "@nuxt/scripts": "0.11.8",
+    "@nuxt/ui": "3.1.3",
+    "@nuxtjs/i18n": "9.5.5",
     "@nuxtjs/seo": "3.0.3",
     "@nuxtjs/supabase": "1.5.1",
     "@nuxtjs/tailwindcss": "6.14.0",
-    "@pinia/nuxt": "0.11.0",
-    "@vueform/nuxt": "1.13.0",
-    "@vueuse/core": "13.2.0",
-    "@vueuse/nuxt": "13.2.0",
-    "@tailwindcss/vite": "4.1.7",
+    "@pinia/nuxt": "0.11.1",
+    "@vueform/nuxt": "1.15.0",
+    "@vueuse/core": "13.3.0",
+    "@vueuse/nuxt": "13.3.0",
+    "@tailwindcss/vite": "4.1.8",
     "consola": "3.4.2",
     "defu": "6.1.4",
     "elrh-pslo": "1.1.6",
     "nuxt-auth-utils": "0.5.20",
-    "nuxt-neon": "0.6.0",
+    "nuxt-neon": "0.6.2",
     "nuxt-security": "2.2.0",
     "nuxt-spec": "0.0.4",
     "open-props": "1.7.15",
-    "pinia": "3.0.2",
+    "pinia": "3.0.3",
     "postcss-jit-props": "1.0.16",
     "typescript": "5.8.3"
   },
   "devDependencies": {
-    "nuxt": "3.17.4",
-    "vue": "3.5.14",
+    "nuxt": "3.17.5",
+    "vue": "3.5.16",
     "vue-router": "4.5.1"
   },
   "pnpm": {
     "overrides": {
-      "@nuxt/kit": "3.17.4",
-      "esbuild": "^0.25.0",
-      "tar-fs": "^3.0.9",
-      "trix": "^2.1.15"
+      "@nuxt/kit": "3.17.5"
     },
     "onlyBuiltDependencies": [
       "@parcel/watcher",
