--- a/core/package.json
+++ b/core/package.json
@@ -61,7 +61,8 @@
     "open-props": "1.7.15",
     "pinia": "3.0.3",
     "postcss-jit-props": "1.0.16",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "zod": "3.25.64"
   },
   "devDependencies": {
     "nuxt": "3.17.5",
