--- a/demos/07b_zod/package.json
+++ b/demos/07b_zod/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "ignis-demo-01",
+  "name": "ignis-demo-07b",
   "type": "module",
   "scripts": {
     "dev": "nuxt dev"
