--- a/core/package.json
+++ b/core/package.json
@@ -62,6 +62,7 @@
     "pinia": "3.0.3",
     "postcss-jit-props": "1.0.16",
     "typescript": "5.8.3",
+    "valibot": "1.1.0",
     "zod": "3.25.64"
   },
   "devDependencies": {
