--- a/demos/02_bare/package.json
+++ b/demos/02_bare/package.json
@@ -6,12 +6,15 @@
     "dev": "nuxt dev"
   },
   "devDependencies": {
-    "nuxt": "3.17.5"
+    "@nuxt/eslint": "1.4.1",
+    "nuxt": "3.17.5",
+    "typescript": "5.8.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
-      "esbuild"
+      "esbuild",
+      "unrs-resolver"
     ]
   }
 }
