feat: bring in Nuxt Charts (#83)

--- a/demos/08a_content/package.json
+++ b/demos/08a_content/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "ignis-demo-08",
+  "name": "ignis-demo-08a",
   "type": "module",
   "scripts": {
     "dev": "nuxt dev"
