--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,7 @@
   "pnpm": {
     "overrides": {
       "esbuild": "^0.25.0",
-      "vite": "^5.4.19"
+      "vite": "npm:rolldown-vite@latest"
     },
     "onlyBuiltDependencies": [
       "esbuild"
