--- a/core/package.json
+++ b/core/package.json
@@ -41,22 +41,23 @@
   },
   "dependencies": {
     "@formkit/nuxt": "1.6.9",
-    "@maas/vue-equipment": "1.0.0-beta.30",
-    "@nuxt/content": "3.6.1",
-    "@nuxt/eslint": "1.4.1",
+    "@maas/vue-equipment": "1.0.0-beta.32",
+    "@nuxt/content": "3.6.3",
+    "@nuxt/eslint": "1.6.0",
     "@nuxt/fonts": "0.11.4",
     "@nuxt/image": "1.10.0",
-    "@nuxt/scripts": "0.11.8",
-    "@nuxt/ui": "3.1.3",
-    "@nuxtjs/i18n": "9.5.5",
+    "@nuxt/scripts": "0.11.10",
+    "@nuxt/ui": "3.2.0",
+    "@nuxtjs/i18n": "9.5.6",
     "@nuxtjs/seo": "3.1.0",
-    "@nuxtjs/supabase": "1.5.2",
+    "@nuxtjs/supabase": "1.5.3",
     "@nuxtjs/tailwindcss": "6.14.0",
-    "@pinia/nuxt": "0.11.1",
-    "@tailwindcss/vite": "4.1.10",
-    "@vueform/nuxt": "1.16.0",
-    "@vueuse/core": "13.4.0",
-    "@vueuse/nuxt": "13.4.0",
+    "@pinia/nuxt": "0.11.2",
+    "@tailwindcss/vite": "4.1.11",
+    "@vueform/nuxt": "1.17.0",
+    "@vueuse/core": "13.5.0",
+    "@vueuse/nuxt": "13.5.0",
+    "better-sqlite3": "12.2.0",
     "consola": "3.4.2",
     "date-fns": "4.1.0",
     "defu": "6.1.4",
@@ -67,21 +68,22 @@
     "nuxt-neon": "0.6.2",
     "nuxt-security": "2.2.0",
     "nuxt-spec": "0.0.4",
-    "open-props": "1.7.15",
+    "open-props": "1.7.16",
     "pinia": "3.0.3",
     "postcss-jit-props": "1.0.16",
     "typescript": "5.8.3",
     "valibot": "1.1.0",
-    "zod": "3.25.67"
+    "zod": "4.0.5"
   },
   "devDependencies": {
-    "nuxt": "3.17.5",
-    "vue": "3.5.16",
+    "nuxt": "3.17.7",
+    "vue": "3.5.17",
     "vue-router": "4.5.1"
   },
   "pnpm": {
     "overrides": {
-      "@nuxt/kit": "3.17.5",
+      "@nuxt/kit": "3.17.7",
+      "@nuxt/schema": "3.17.7",
       "brace-expansion": "^1.1.12"
     },
     "onlyBuiltDependencies": [
@@ -95,5 +97,5 @@
       "vue-demi"
     ]
   },
-  "packageManager": "pnpm@10.12.1"
+  "packageManager": "pnpm@10.13.1"
 }
