--- a/core/package.json
+++ b/core/package.json
@@ -84,16 +84,14 @@
     "overrides": {
       "@nuxt/kit": "3.17.7",
       "@nuxt/schema": "3.17.7",
-      "@eslint/plugin-kit": "^0.3.3",
-      "vue-i18n": "^10.0.8",
-      "@intlify/core": "^10.0.8",
-      "@intlify/core-base": "^10.0.8"
+      "@eslint/plugin-kit": "^0.3.3"
     },
     "onlyBuiltDependencies": [
       "@parcel/watcher",
       "@tailwindcss/oxide",
       "better-sqlite3",
       "esbuild",
+      "maplibre-gl",
       "puppeteer",
       "sharp",
       "unrs-resolver",
