fix: make Nuxt Content demo operational

--- a/demos/08a_content/package.json
+++ b/demos/08a_content/package.json
@@ -6,9 +6,10 @@
     "dev": "nuxt dev"
   },
   "devDependencies": {
-    "@nuxt/eslint": "1.6.0",
+    "@nuxt/eslint": "1.7.0",
     "better-sqlite3": "12.2.0",
     "nuxt": "3.17.7",
+    "vue": "3.5.18",
     "typescript": "5.8.3"
   },
   "pnpm": {
