--- a/core/package.json
+++ b/core/package.json
@@ -63,6 +63,7 @@
     "consola": "3.4.2",
     "date-fns": "4.1.0",
     "defu": "6.1.4",
+    "elrh-cosca": "0.1.0",
     "elrh-pslo": "1.1.6",
     "magic-regexp": "0.10.0",
     "nuxt-auth-utils": "0.5.20",
