--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,6 @@ demos/**/eslint.config.mjs
 # no need to keep track on this for demo apps
 demos/**/pnpm-lock.yaml
 
-# config snapshot created upon Nuxt start
+# Nuxt Ignis files
+# configuration overview created upon Nuxt Ignis start
 _ignis-config.json
