--- a/core/package.json
+++ b/core/package.json
@@ -27,7 +27,8 @@
     "node": "^20.19.0 || >=22.12.0"
   },
   "bin": {
-    "make-eslint": "./bin/make-eslint.js"
+    "make-eslint": "./bin/make-eslint.js",
+    "set-gitignore": "./bin/set-gitignore.js"
   },
   "scripts": {
     "analyze": "nuxt analyze",
