--- a/core/package.json
+++ b/core/package.json
@@ -92,7 +92,8 @@
       "@nuxtjs/mdc": "^0.17.2",
       "axios": "^1.12.0",
       "devalue": "^5.3.2",
-      "tmp": "^0.2.5"
+      "tmp": "^0.2.5",
+      "vite": "^7.0.7"
     },
     "onlyBuiltDependencies": [
       "@parcel/watcher",
