--- a/core/package.json
+++ b/core/package.json
@@ -44,56 +44,48 @@
   },
   "dependencies": {
     "@formkit/nuxt": "1.6.9",
-    "@maas/vue-equipment": "1.0.0-beta.32",
-    "@nuxt/content": "3.6.3",
-    "@nuxt/eslint": "1.6.0",
+    "@maas/vue-equipment": "1.0.0-beta.36",
+    "@nuxt/content": "3.7.1",
+    "@nuxt/eslint": "1.9.0",
     "@nuxt/fonts": "0.11.4",
-    "@nuxt/image": "1.10.0",
-    "@nuxt/scripts": "0.11.10",
-    "@nuxt/ui": "3.2.0",
-    "@nuxtjs/i18n": "10.0.3",
-    "@nuxtjs/seo": "3.1.0",
-    "@nuxtjs/supabase": "1.5.3",
+    "@nuxt/image": "1.11.0",
+    "@nuxt/scripts": "0.11.13",
+    "@nuxt/ui": "3.3.4",
+    "@nuxtjs/i18n": "9.5.6",
+    "@nuxtjs/seo": "3.2.2",
+    "@nuxtjs/supabase": "1.6.2",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@pinia/nuxt": "0.11.2",
-    "@tailwindcss/vite": "4.1.11",
-    "@vueform/nuxt": "1.17.0",
-    "@vueuse/core": "13.5.0",
-    "@vueuse/nuxt": "13.5.0",
+    "@tailwindcss/vite": "4.1.13",
+    "@vueform/nuxt": "1.20.0",
+    "@vueuse/core": "13.9.0",
+    "@vueuse/nuxt": "13.9.0",
     "better-sqlite3": "12.2.0",
     "consola": "3.4.2",
     "date-fns": "4.1.0",
     "defu": "6.1.4",
-    "elrh-cosca": "0.1.0",
+    "elrh-cosca": "0.2.7",
     "elrh-pslo": "1.1.6",
     "magic-regexp": "0.10.0",
-    "nuxt-auth-utils": "0.5.20",
-    "nuxt-charts": "0.2.1",
-    "nuxt-neon": "0.6.2",
-    "nuxt-security": "2.2.0",
+    "nuxt": "4.1.2",
+    "nuxt-auth-utils": "0.5.25",
+    "nuxt-charts": "0.2.4",
+    "nuxt-neon": "0.7.0",
+    "nuxt-security": "2.4.0",
     "nuxt-spec": "0.1.8",
     "open-props": "1.7.16",
     "pinia": "3.0.3",
     "postcss-jit-props": "1.0.16",
-    "typescript": "5.8.3",
+    "typescript": "5.9.2",
     "valibot": "1.1.0",
-    "zod": "4.0.5"
-  },
-  "devDependencies": {
-    "nuxt": "4.0.2",
-    "vue": "3.5.18",
-    "vue-router": "4.5.1"
+    "vue": "3.5.21",
+    "vue-router": "4.5.1",
+    "zod": "4.1.11"
   },
   "pnpm": {
     "overrides": {
-      "@nuxt/kit": "4.0.2",
-      "@nuxt/schema": "4.0.2",
-      "@eslint/plugin-kit": "^0.3.3",
-      "@nuxtjs/mdc": "^0.17.2",
-      "axios": "^1.12.0",
-      "devalue": "^5.3.2",
-      "tmp": "^0.2.5",
-      "vite": "^7.0.7"
+      "@nuxt/kit": "4.1.2",
+      "@nuxt/schema": "4.1.2"
     },
     "onlyBuiltDependencies": [
       "@parcel/watcher",
@@ -107,5 +99,5 @@
       "vue-demi"
     ]
   },
-  "packageManager": "pnpm@10.15.0"
+  "packageManager": "pnpm@10.17.0"
 }
