feat: allow editing default CSS file (#100)

--- a/core/package.json
+++ b/core/package.json
@@ -28,6 +28,7 @@
   },
   "bin": {
     "setup": "./bin/setup.js",
+    "set-css": "./bin/set-css.js",
     "set-eslint": "./bin/set-eslint.js"
   },
   "scripts": {
