docs: update project homepage

--- a/core/package.json
+++ b/core/package.json
@@ -11,7 +11,7 @@
     "nuxt-layer"
   ],
   "author": "Alois Seckar <alois.seckar@gmail.com>",
-  "homepage": "https://github.com/AloisSeckar/nuxt-ignis",
+  "homepage": "https://nuxt-ignis.com/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AloisSeckar/nuxt-ignis.git"
