--- a/demos/01_default/package.json
+++ b/demos/01_default/package.json
@@ -7,8 +7,8 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "1.9.0",
-    "nuxt": "4.1.3",
-    "typescript": "5.9.2"
+    "nuxt": "4.2.0",
+    "typescript": "5.9.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
@@ -16,5 +16,6 @@
       "esbuild",
       "unrs-resolver"
     ]
-  }
+  },
+  "packageManager": "pnpm@10.19.0"
 }
