--- a/demos/08a_content/package.json
+++ b/demos/08a_content/package.json
@@ -8,9 +8,9 @@
   "devDependencies": {
     "@nuxt/eslint": "1.9.0",
     "better-sqlite3": "12.2.0",
-    "nuxt": "4.1.3",
-    "vue": "3.5.18",
-    "typescript": "5.9.2"
+    "nuxt": "4.2.0",
+    "vue": "3.5.22",
+    "typescript": "5.9.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
@@ -19,5 +19,6 @@
       "esbuild",
       "unrs-resolver"
     ]
-  }
+  },
+  "packageManager": "pnpm@10.19.0"
 }
