--- a/demos/11_charts/package.json
+++ b/demos/11_charts/package.json
@@ -7,9 +7,10 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "1.9.0",
-    "@unovis/ts": "1.6.0",
-    "nuxt": "4.1.3",
-    "typescript": "5.9.2"
+    "@unovis/ts": "1.6.1",
+    "nuxt": "4.2.0",
+    "to-px": "1.1.0",
+    "typescript": "5.9.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
@@ -19,7 +20,5 @@
       "unrs-resolver"
     ]
   },
-  "dependencies": {
-    "to-px": "^1.1.0"
-  }
+  "packageManager": "pnpm@10.19.0"
 }
