--- a/core/package.json
+++ b/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-ignis",
-  "version": "0.5.0-rc.2",
+  "version": "0.5.0",
   "description": "A ready-to-use setup for your next application in Nuxt",
   "keywords": [
     "nuxt",
