--- a/core/package.json
+++ b/core/package.json
@@ -63,14 +63,14 @@
     "@vueform/nuxt": "1.23.0",
     "@vueuse/core": "14.0.0",
     "@vueuse/nuxt": "14.0.0",
-    "better-sqlite3": "12.2.0",
+    "better-sqlite3": "catalog:",
     "consola": "3.4.2",
     "date-fns": "4.1.0",
     "defu": "6.1.4",
     "elrh-cosca": "0.3.5",
     "elrh-pslo": "1.1.6",
     "magic-regexp": "0.10.0",
-    "nuxt": "4.2.0",
+    "nuxt": "catalog:",
     "nuxt-auth-utils": "0.5.25",
     "nuxt-charts": "1.0.2",
     "nuxt-neon": "0.7.0",
@@ -79,27 +79,12 @@
     "open-props": "1.7.16",
     "pinia": "3.0.3",
     "postcss-jit-props": "1.0.16",
-    "typescript": "5.9.3",
+    "tailwindcss": "4.1.16",
+    "typescript": "catalog:",
     "valibot": "1.1.0",
-    "vue": "3.5.22",
-    "vue-router": "4.6.3",
+    "vue": "catalog:",
+    "vue-router": "catalog:",
     "zod": "4.1.12"
-  },
-  "pnpm": {
-    "overrides": {
-      "tar": "^7.5.2"
-    },
-    "onlyBuiltDependencies": [
-      "@parcel/watcher",
-      "@tailwindcss/oxide",
-      "better-sqlite3",
-      "esbuild",
-      "maplibre-gl",
-      "puppeteer",
-      "sharp",
-      "unrs-resolver",
-      "vue-demi"
-    ]
   },
   "packageManager": "pnpm@10.19.0"
 }
