--- a/demos/03_full/package.json
+++ b/demos/03_full/package.json
@@ -6,18 +6,10 @@
     "dev": "nuxt dev"
   },
   "devDependencies": {
-    "@nuxt/eslint": "1.9.0",
-    "better-sqlite3": "12.2.0",
-    "nuxt": "4.2.0",
-    "typescript": "5.9.3"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "@parcel/watcher",
-      "better-sqlite3",
-      "esbuild",
-      "unrs-resolver"
-    ]
+    "better-sqlite3": "catalog:",
+    "@nuxt/eslint": "catalog:",
+    "nuxt": "catalog:",
+    "typescript": "catalog:"
   },
   "packageManager": "pnpm@10.19.0"
 }
