--- a/demos/08b_content-tailwind/package.json
+++ b/demos/08b_content-tailwind/package.json
@@ -6,19 +6,11 @@
     "dev": "nuxt dev"
   },
   "devDependencies": {
-    "@nuxt/eslint": "1.9.0",
-    "better-sqlite3": "12.2.0",
-    "nuxt": "4.2.0",
-    "vue": "3.5.22",
-    "typescript": "5.9.3"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "@parcel/watcher",
-      "better-sqlite3",
-      "esbuild",
-      "unrs-resolver"
-    ]
+    "better-sqlite3": "catalog:",
+    "@nuxt/eslint": "catalog:",
+    "nuxt": "catalog:",
+    "typescript": "catalog:",
+    "vue": "catalog:"
   },
   "packageManager": "pnpm@10.19.0"
 }
