--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -24,3 +24,4 @@ onlyBuiltDependencies:
 
 overrides:
   vite: npm:rolldown-vite@latest
+  '@nuxt/vite-builder': npm:@nuxt/vite-builder-nightly@4.2.2-29390287.ffa14fe8
