build: switch to Vite v8 (#145)

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -23,5 +23,5 @@ onlyBuiltDependencies:
   - vue-demi
 
 overrides:
-  vite: npm:rolldown-vite@latest
+  vite: npm:vite@8.0.0-beta.0
   '@nuxt/vite-builder': npm:@nuxt/vite-builder-nightly@4.2.2-29390287.ffa14fe8
