feat: bump nuxt-neon to v8 for better security

--- a/demos/05a_neon/.env.example
+++ b/demos/05a_neon/.env.example
@@ -6,3 +6,6 @@ NUXT_NEON_HOST=<NeonDB_host>
 NUXT_NEON_USER=<NeonDB_user>
 NUXT_NEON_PASS=<NeonDB_pass>
 NUXT_PUBLIC_NEON_DB=<NeonDB_name>
+# required to call Neon endpoints directly from the frontend
+# WARNING: discouraged from production use due to security reasons
+NUXT_PUBLIC_NEON_EXPOSE_ENDPOINTS=true
