feat: move UI features into standalone utility module

--- a/core/package.json
+++ b/core/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@nuxt-ignis/db": "^0.0.5",
     "@nuxt-ignis/forms": "^0.0.4",
+    "@nuxt-ignis/ui": "^0.0.1",
     "@nuxt-ignis/validation": "^0.0.3",
     "@maas/vue-equipment": "1.0.0-beta.37",
     "@nuxt/content": "3.7.1",
@@ -55,10 +56,8 @@
     "@nuxt/fonts": "0.11.4",
     "@nuxt/image": "2.0.0",
     "@nuxt/scripts": "0.13.0",
-    "@nuxt/ui": "4.2.1",
     "@nuxtjs/i18n": "10.1.1",
     "@nuxtjs/seo": "3.2.2",
-    "@nuxtjs/tailwindcss": "6.14.0",
     "@pinia/nuxt": "0.11.2",
     "@stefanobartoletti/nuxt-social-share": "2.2.0",
     "@tailwindcss/vite": "4.1.18",
@@ -67,19 +66,16 @@
     "better-sqlite3": "catalog:",
     "consola": "3.4.2",
     "date-fns": "4.1.0",
-    "defu": "6.1.4",
+    "defu": "catalog:",
     "elrh-cosca": "0.3.5",
     "elrh-pslo": "1.1.6",
     "magic-regexp": "0.10.0",
     "nuxt": "catalog:",
     "nuxt-auth-utils": "0.5.25",
-    "nuxt-charts": "1.0.2",
     "nuxt-security": "2.4.0",
     "nuxt-spec": "0.1.14",
-    "open-props": "1.7.16",
     "pinia": "3.0.3",
     "postcss-jit-props": "1.0.16",
-    "tailwindcss": "4.1.18",
     "typescript": "catalog:",
     "vue": "catalog:",
     "vue-router": "catalog:"
