--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -15,6 +15,7 @@ catalog:
   '@types/node': ^25.2.2
   better-sqlite3: 12.2.0
   changelogen: ^0.6.2
+  defu: ^6.1.4
   eslint: ^9.39.2
   nuxt: 4.3.1
   typescript: ^5.9.3
