feat: move content features into standalone utility module

--- a/core/package.json
+++ b/core/package.json
@@ -46,29 +46,26 @@
     "test-i": "vitest"
   },
   "dependencies": {
+    "@nuxt-ignis/content": "^0.0.1",
     "@nuxt-ignis/db": "^0.0.5",
     "@nuxt-ignis/forms": "^0.0.4",
     "@nuxt-ignis/ui": "^0.0.1",
     "@nuxt-ignis/validation": "^0.0.3",
     "@maas/vue-equipment": "1.0.0-beta.37",
-    "@nuxt/content": "3.7.1",
     "@nuxt/eslint": "catalog:",
     "@nuxt/fonts": "0.11.4",
     "@nuxt/image": "2.0.0",
     "@nuxt/scripts": "0.13.0",
-    "@nuxtjs/i18n": "10.1.1",
     "@nuxtjs/seo": "3.2.2",
     "@pinia/nuxt": "0.11.2",
     "@stefanobartoletti/nuxt-social-share": "2.2.0",
     "@tailwindcss/vite": "4.1.18",
     "@vueuse/core": "14.0.0",
     "@vueuse/nuxt": "14.0.0",
-    "better-sqlite3": "catalog:",
     "consola": "3.4.2",
     "date-fns": "4.1.0",
     "defu": "catalog:",
     "elrh-cosca": "0.3.5",
-    "elrh-pslo": "1.1.6",
     "magic-regexp": "0.10.0",
     "nuxt": "catalog:",
     "nuxt-auth-utils": "0.5.25",
