feat: move remaining misc features into standalone utility module

--- a/core/package.json
+++ b/core/package.json
@@ -51,8 +51,8 @@
     "@nuxt-ignis/db": "^0.0.5",
     "@nuxt-ignis/forms": "^0.0.4",
     "@nuxt-ignis/ui": "^0.0.1",
+    "@nuxt-ignis/utils": "^0.0.1",
     "@nuxt-ignis/validation": "^0.0.3",
-    "@maas/vue-equipment": "1.0.0-beta.37",
     "@nuxt/eslint": "catalog:",
     "@nuxtjs/seo": "3.2.2",
     "@stefanobartoletti/nuxt-social-share": "2.2.0",
@@ -60,7 +60,6 @@
     "date-fns": "4.1.0",
     "defu": "catalog:",
     "elrh-cosca": "0.3.5",
-    "magic-regexp": "0.10.0",
     "nuxt": "catalog:",
     "nuxt-spec": "0.1.14",
     "typescript": "catalog:",
