build: move versions to catalog

--- a/core/package.json
+++ b/core/package.json
@@ -54,12 +54,12 @@
     "@nuxt-ignis/utils": "^0.0.1",
     "@nuxt-ignis/validation": "^0.0.3",
     "@nuxt/eslint": "catalog:",
-    "consola": "3.4.2",
-    "date-fns": "4.1.0",
+    "consola": "catalog:",
+    "date-fns": "catalog:",
     "defu": "catalog:",
-    "elrh-cosca": "0.3.5",
+    "elrh-cosca": "catalog:",
     "nuxt": "catalog:",
-    "nuxt-spec": "0.1.14",
+    "nuxt-spec": "catalog:",
     "typescript": "catalog:",
     "vue": "catalog:",
     "vue-router": "catalog:"
