--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,8 +6,8 @@ packages:
 
 catalog:
   '@nuxt/devtools': ^3.1.1
-  '@nuxt/eslint': ^1.14.0
-  '@nuxt/eslint-config': ^1.14.0
+  '@nuxt/eslint': ^1.15.1
+  '@nuxt/eslint-config': ^1.15.1
   '@nuxt/kit': 4.3.1
   '@nuxt/module-builder': ^1.0.2
   '@nuxt/schema': 4.3.1
@@ -15,9 +15,13 @@ catalog:
   '@types/node': ^25.2.2
   better-sqlite3: 12.2.0
   changelogen: ^0.6.2
+  consola: ^3.4.2
+  date-fns: ^4.1.0
   defu: ^6.1.4
+  elrh-cosca: ^0.3.5
   eslint: ^9.39.2
   nuxt: 4.3.1
+  nuxt-spec: 0.1.18
   typescript: ^5.9.3
   vitest: ^4.0.18
   vue: 3.5.27
